Warnings and Code Standards for GameOptions.